<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_icon"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rate_icon"
            android:title="@string/menu_rate" />

        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/policy_icon"
            android:title="@string/menu_Policy" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_icon"
            android:title="@string/menu_exit" />

    </group>

</menu>