<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:openDrawer="end">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="250dp"
        android:layout_height="fill_parent"
        android:layout_gravity="start"
        android:background="@drawable/rounded_corner"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#E4C70AE8"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/menu_icon"
                app:title="@string/toolber_title"
                tools:ignore="MissingConstraints" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/backimg"
            android:overScrollMode="never"
            app:layout_constraintHorizontal_weight="1"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/First_love"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/First_love"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp"
                    tools:layout_editor_absoluteY="5dp" />

                <Button
                    android:id="@+id/Crush_quotes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Crush_quotes"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/First_love"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Falling_in_love"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Falling_in_love"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Crush_quotes"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Heart_touching"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Heart_touching"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Falling_in_love"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Inspirational_love_quotes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Inspirational_love_quotes"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Heart_touching"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/kiss_quotes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/kiss_quotes"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Inspirational_love_quotes"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Miss_you"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Miss_you"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/kiss_quotes"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Roamantic_love"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Roamantic_love"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Miss_you"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Sad_broken_heart"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Sad_broken_heart"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Roamantic_love"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />

                <Button
                    android:id="@+id/Sweet_love_quotes"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_corner"
                    android:onClick="Click"
                    android:text="@string/Sweet_love_quotes"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/Sad_broken_heart"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="5dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>

